fixed broken styles | todo: add common colors to variables.scss

--- a/client/src/app/components/ClassCard/classCard.scss
+++ b/client/src/app/components/ClassCard/classCard.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 .class-card{
   $root: &;
   width: 200px;
@@ -22,6 +24,7 @@
   &__code{
     background: none;
     border: none;
+    border-radius: 3px;
     margin-left: auto;
     font-family: Roboto;
     font-size: 14px;
@@ -32,10 +35,11 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: 0;
 
-    &:focus{
+    &:focus, &:hover{
       outline: none;
+      border: none;
+      background: $lighter-gray;
     }
     svg{
       margin-left: 4px;
